@@ -1,3 +1,7 @@
+2000-01-26  Ettore Perazzoli  <ettore@helixcode.com>
+
+	* All files: Updated according to the new Bonobo naming changes.
+
 2000-01-25  Ettore Perazzoli  <ettore@helixcode.com>
 
 	* test-html-editor-control.c: Added a "Save As..." menu item and its
